--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Findmewebapp" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "Find Me" %></title>
     <%= csrf_meta_tags %>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
@@ -45,12 +45,25 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Findmewebapp</a>
+        <a class="navbar-brand" href="<%= root_path %>">Find Me</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to "Link1", "/path1"  %></li>
-            <li><%= link_to "Link2", "/path2"  %></li>
-            <li><%= link_to "Link3", "/path3"  %></li>
+            
+             <% if user_signed_in? %>
+                 <li><%= link_to "My Profile", user_profiles_path(current_user)   %></li>
+                 <li><%= link_to "My Pets", user_pets_path(current_user)  %></li>
+                 <li><%= link_to "My Search", my_searches_path  %></li>
+                 <li><%= link_to "#{current_user.email}"%></li>
+                 <li> <%= link_to "Sign_out", destroy_user_session_path, method: :delete%> </li>
+                  
+              <% else%>
+                  
+                 <li> <%= link_to "Sign_in" ,new_user_session_path%>   </li>
+                  
+                 <li> <%= link_to "Sign_up" , new_user_registration_path%></li>
+                      
+                 
+              <% end %>
           </ul>
         </div>
       </div>
@@ -64,12 +77,14 @@
         </div>
         <div class="col-lg-3">
           <div class="well sidebar-nav">
-            <h3>Sidebar</h3>
+            <h3>Find Me</h3>
             <ul class="nav nav-list">
-              <li class="nav-header">Sidebar</li>
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
+              <li class="nav-header">Find Me</li>
+              <% if user_signed_in? %>
+                 <li><%= link_to "My Profile",  user_profiles_path(current_user)   %></li>
+                 <li><%= link_to "My Pets", user_pets_path(current_user)%></li>
+                 <li><%= link_to "My Search", my_searches_path  %></li>
+              <% end%>
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
