--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,18 +1,18 @@
-<%= simple_form_for @profile, :html => { :class => 'form-horizontal' } do |f| %>
+<%= simple_form_for [@user,@profile], :url => user_profiles_path ,:html => { :class => 'form-horizontal' } do |f| %>
   <%= f.input :name %>
   <%= error_span(@profile[:name]) %>
   <%= f.input :lastname %>
   <%= error_span(@profile[:lastname]) %>
   <%= f.input :address %>
   <%= error_span(@profile[:address]) %>
-  <%= f.input :sex %>
+  <%= f.input :sex ,:collection => ['H', 'M'] , :as => :radio_buttons%>
   <%= error_span(@profile[:sex]) %>
-  <%= f.input :user_id %>
+  <%= f.input :user_id , as: :hidden , :input_html => { :value => "#{current_user.id}"}  %>
   <%= error_span(@profile[:user_id]) %>
-  <%= f.input :district_id %>
-  <%= error_span(@profile[:district_id]) %>
+  <%= f.association :district %>
+  <%= error_span(@profile[:district]) %>
 
   <%= f.button :submit, :class => 'btn-primary' %>
   <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                profiles_path, :class => 'btn btn-default' %>
+                user_profiles_path(current_user,@profile), :class => 'btn btn-default' %>
 <% end %>
