--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -18,12 +18,5 @@
   <dd><%= @profile.district_id %></dd>
 </dl>
 
-<%= link_to t('.back', :default => t("helpers.links.back")),
-              profiles_path, :class => 'btn btn-default'  %>
 <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_profile_path(@profile), :class => 'btn btn-default' %>
-<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              profile_path(@profile),
-              :method => 'delete',
-              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-              :class => 'btn btn-danger' %>
+              edit_user_profiles_path(current_user), :class => 'btn btn-default' %>
