--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
       <th><%= model_class.human_attribute_name(:name) %></th>
+         <th><%= model_class.human_attribute_name(:photo) %></th>
       <th><%= model_class.human_attribute_name(:sex) %></th>
       <th><%= model_class.human_attribute_name(:race) %></th>
       <th><%= model_class.human_attribute_name(:age) %></th>
@@ -22,12 +23,13 @@
       <tr>
         <td><%= link_to pet.id, user_pet_path(current_user,pet) %></td>
         <td><%= pet.name %></td>
+        <td><%= image_tag pet.photo.url(:thumb) %></td>
         <td><%= pet.sex %></td>
         <td><%= pet.race.name %></td>
         <td><%= pet.age %></td>
         <td><%= pet.vaccinated %></td>
         <td><%= pet.information %></td>
-        <td><%= pet.pet_type.description %></td>
+        <td><%= pet.pet_type.name %></td>
         <td><%=l pet.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
