--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -16,6 +16,8 @@
   <dd><%= @profile.user_id %></dd>
   <dt><strong><%= model_class.human_attribute_name(:district_id) %>:</strong></dt>
   <dd><%= @profile.district_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:photo) %>:</strong></dt>
+  <dd><%= image_tag @profile.photo.url(:thumb) %></dd>
 </dl>
 
 <%= link_to t('.edit', :default => t("helpers.links.edit")),
