se creo el login y el registrar usuarios

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,30 @@
-<h1>Welcome</h1>
-<p>Thanks for visit our site</p>
+<h1>Finding Me</h1>
+
+<p>Si encuentras un perro repórtalo como ENCONTRADO en el área donde lo hallaste.
+¡Juntos podemos hacer que todos los perros perdidos vuelvan con sus familias!</p>
+
+<h3>Problemática</h3>
+<p>Cada día hay decenas de mascotas que se pierden en nuestro país. Sucede a diario y es uno de los problemas urbanos más comunes.
+
+
+<h3>Nosotros</h3>
+
+<p>La aplicación surge como una manera de complementar las búsquedas tradicionales y agilizar ese proceso.</p>
+<p>Una aplicación gratuita que funciona a través de los smartphones (Android) y que permite conectar a quién perdió su mascota con aquella persona que la encontró. Para eso se por medio de un mapa que permitirá marcar con exactitud el lugar en el que fue visto por última vez, dejar características de la mascota y así ayudar a que puedan identificarlo.</p>
+
+<h3>Funcionalidades</h3>
+<ul>
+    <li>Explorar el mapa en búsqueda de la mascota perdida.</li>
+    <li>Registrar y reportar a tu mascota.</li>
+    <li>Recibir notificaciones cuando alguien reporte haber encontrado a una mascota que podría ser la tuya.</li>
+    <li>Contactar a la persona que encontró a tu mascota o contactar al dueño de la mascota perdida.</li>
+</ul>
+
+<h3>Motivos:</h3>
+<ul>
+    <li>Descuido por parte del dueño</li>
+    <li>Robo de mascotas</li>
+    <li>La mascota se escapó</li>
+</ul>
+
+</p>
