--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,25 +45,29 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="<%= root_path %>">Find Me</a>
+        <a class="navbar-brand" href="<%= root_path %>">Finding Me</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
             
-             <% if user_signed_in? %>
-                 <li><%= link_to "My Profile", user_profiles_path(current_user)   %></li>
-                 <li><%= link_to "My Pets", user_pets_path(current_user)  %></li>
+                <% if logged_in? %>
+                 <li><%= link_to "My Profile", user_profiles_path(1)%></li>
+                 <li><%= link_to "My Pets", user_pets_path(1)  %></li>
                  <li><%= link_to "My Search", my_searches_path  %></li>
-                 <li><%= link_to "#{current_user.email}"%></li>
-                 <li> <%= link_to "Sign_out", destroy_user_session_path, method: :delete%> </li>
+                 <li><%= link_to "Admin" ,rails_admin.dashboard_path %></li>
+                 <li> <%= link_to "Sign_out",  logout_path%> </li>
+                 <% else %>
+                   <li> <%= link_to "Sign_in" , login_path%>   </li>
                   
-              <% else%>
+                   <li> <%= link_to "Sign_up" , register_path%></li>
+                
+           
+                 <% end %>
+                 
+               
                   
-                 <li> <%= link_to "Sign_in" ,new_user_session_path%>   </li>
-                  
-                 <li> <%= link_to "Sign_up" , new_user_registration_path%></li>
                       
                  
-              <% end %>
+              
           </ul>
         </div>
       </div>
@@ -79,12 +83,12 @@
           <div class="well sidebar-nav">
             <h3>Find Me</h3>
             <ul class="nav nav-list">
-              <li class="nav-header">Find Me</li>
-              <% if user_signed_in? %>
-                 <li><%= link_to "My Profile",  user_profiles_path(current_user)   %></li>
-                 <li><%= link_to "My Pets", user_pets_path(current_user)%></li>
+              <li class="nav-header">Finding Me</li>
+             <% if logged_in? %>
+                 <li><%= link_to "My Profile",  user_profiles_path(1)   %></li>
+                 <li><%= link_to "My Pets", user_pets_path(1)%></li>
                  <li><%= link_to "My Search", my_searches_path  %></li>
-              <% end%>
+             <% end %>
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
