--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,14 +1,14 @@
-<%= simple_form_for(@comment) do |f| %>
-  <%= f.error_notification %>
+<%= simple_form_for [@lost_pet,@comment], :html => { :class => 'form-horizontal' } do |f| %>
+  <%= f.input :comment %>
+  <%= error_span(@comment[:comment]) %>
+  <%= f.input :founded  , :collection => ['SI', 'NO'] , :as => :radio_buttons %>
+  <%= error_span(@comment[:founded]) %>
+  <%= f.input :lost_pet_id , as: :hidden , :input_html => { :value => "#{@lost_pet.id}"}%>
+  <%= error_span(@comment[:lost_pet_id]) %>
+  <%= f.input :user_id , as: :hidden , :input_html => { :value => "#{current_user.id}"}%>
+  <%= error_span(@comment[:user_id]) %>
 
-  <div class="form-inputs">
-    <%= f.input :comment %>
-    <%= f.input :founded %>
-    <%= f.association :lost_pet %>
-    <%= f.association :user %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
+  <%= f.button :submit, :class => 'btn-primary' %>
+  <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                lost_pet_comments_path(@lost_pet,@my_search), :class => 'btn btn-default' %>
 <% end %>
