--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,33 +1,45 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Comments</h1>
-
-<table>
+<%- model_class = Comment -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Comment</th>
-      <th>Founded</th>
-      <th>Lost pet</th>
-      <th>User</th>
-      <th colspan="3"></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:comment) %></th>
+      <th><%= model_class.human_attribute_name(:founded) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @comments.each do |comment| %>
       <tr>
+        <td><%= link_to comment.id, lost_pet_comment_path(@lost_pet,comment) %></td>
         <td><%= comment.comment %></td>
         <td><%= comment.founded %></td>
-        <td><%= comment.lost_pet %></td>
-        <td><%= comment.user %></td>
-        <td><%= link_to 'Show', comment %></td>
-        <td><%= link_to 'Edit', edit_comment_path(comment) %></td>
-        <td><%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%=l comment.created_at %></td>
+        <td>
+          <%if current_user.id==comment.user_id%>
+          
+              <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                          edit_lost_pet_comment_path(@lost_pet,comment), :class => 'btn btn-default btn-xs' %>
+              <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                          lost_pet_comment_path(@lost_pet,comment),
+                          :method => :delete,
+                          :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                          :class => 'btn btn-xs btn-danger' %>
+                          
+      
+          <%end%>
+          
+        
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Comment', new_comment_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_lost_pet_comment_path(@lost_pet),
+            :class => 'btn btn-primary' %>
