--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,24 +1,25 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Comment -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>Comment:</strong>
-  <%= @comment.comment %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:comment) %>:</strong></dt>
+  <dd><%= @comment.comment %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:founded) %>:</strong></dt>
+  <dd><%= @comment.founded %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:lost_pet_id) %>:</strong></dt>
+  <dd><%= @comment.lost_pet_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:user_id) %>:</strong></dt>
+  <dd><%= @comment.user_id %></dd>
+</dl>
 
-<p>
-  <strong>Founded:</strong>
-  <%= @comment.founded %>
-</p>
-
-<p>
-  <strong>Lost pet:</strong>
-  <%= @comment.lost_pet %>
-</p>
-
-<p>
-  <strong>User:</strong>
-  <%= @comment.user %>
-</p>
-
-<%= link_to 'Edit', edit_comment_path(@comment) %> |
-<%= link_to 'Back', comments_path %>
+<%= link_to t('.back', :default => t("helpers.links.back")),
+               lost_pet_comments_path(@lost_pet), :class => 'btn btn-default'  %>
+<%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_lost_pet_comment_path(@lost_pet,@comment), :class => 'btn btn-default' %>
+<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+             lost_pet_comment_path(@lost_pet,@comment),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
