--- a/app/views/lost_pets/show.html.erb
+++ b/app/views/lost_pets/show.html.erb
@@ -2,26 +2,39 @@
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
 </div>
+<div class="row">
+      <div class="col-sm-5">
+                      
+            <dl class="dl-horizontal">
+              <dt><strong><%= model_class.human_attribute_name(:pet_id) %>:</strong></dt>
+              <dd><%= @lost_pet.pet.name %></dd>
+             
+              <dt><strong><%= model_class.human_attribute_name(:report_date) %>:</strong></dt>
+              <dd><%= @lost_pet.report_date %></dd>
+              <dt><strong><%= model_class.human_attribute_name(:lost_date) %>:</strong></dt>
+              <dd><%= @lost_pet.lost_date %></dd>
+              <dt><strong><%= model_class.human_attribute_name(:district_id)%></strong></dt>
+              <dd><%= @lost_pet.district.name %></dd>
+               <dt><strong><%= model_class.human_attribute_name(:info) %>:</strong></dt>
+              <dd><%= @lost_pet.info %></dd>
+              
+            </dl>
 
-<dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:status) %>:</strong></dt>
-  <dd><%= @lost_pet.status %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:info) %>:</strong></dt>
-  <dd><%= @lost_pet.info %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:report_date) %>:</strong></dt>
-  <dd><%= @lost_pet.report_date %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:lost_date) %>:</strong></dt>
-  <dd><%= @lost_pet.lost_date %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:found_date) %>:</strong></dt>
-  <dd><%= @lost_pet.found_date %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:pet_id) %>:</strong></dt>
-  <dd><%= @lost_pet.pet.name %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:district_id)%></strong></dt>
-  <dd><%= @lost_pet.district.name %></dd>
-</dl>
+          
+      </div>
+      <div class="col-sm-1"></div>
+      <div class="col-sm-6">
+          <dt><strong>Lost Place</strong></dt>
+          <div id="map-canvas"></div>
+          
+      </div>
+    </div>
 
 <%= link_to t('.back', :default => t("helpers.links.back")),
               lost_pets_path, :class => 'btn btn-default'  %>
+              
+<% if @lost_pet.user_id==current_user.id %>
+        
 <%= link_to t('.edit', :default => t("helpers.links.edit")),
               edit_lost_pet_path(@lost_pet), :class => 'btn btn-default',data: { no_turbolink: true }  %>
 <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
@@ -29,3 +42,41 @@
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
+<% else %>
+
+<%end%>
+
+<style>
+  #map-canvas {
+    width: 100%;
+    height: 400px;
+  }
+</style>
+<script src="https://maps.googleapis.com/maps/api/js"></script>
+<script>
+
+ var marker;
+ var lost_long="<%=@lost_pet.longitude%>";
+ var lost_lat= "<%=@lost_pet.latitude%>";
+ var isNew=true
+  function initialize() {
+     
+    var mapCanvas = document.getElementById('map-canvas');
+    var mapOptions = {
+      center: new google.maps.LatLng(lost_lat,lost_long),
+      zoom: 18,
+      mapTypeId: google.maps.MapTypeId.ROADMAP
+    }
+    var map = new google.maps.Map(mapCanvas, mapOptions);
+    
+    marker = new google.maps.Marker({
+    	position: new google.maps.LatLng(lost_lat,lost_long),
+    	title: "my lost pet!",
+    });
+
+    marker.setMap(map);
+   
+  }
+  google.maps.event.addDomListener(window, 'load', initialize);
+ 
+</script>
