--- a/app/views/my_searches/show.html.erb
+++ b/app/views/my_searches/show.html.erb
@@ -1,14 +1,21 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = MySearch -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>Lost pet:</strong>
-  <%= @my_search.lost_pet %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:lost_pet_id) %>:</strong></dt>
+  <dd><%= @my_search.lost_pet_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:user_id) %>:</strong></dt>
+  <dd><%= @my_search.user_id %></dd>
+</dl>
 
-<p>
-  <strong>User:</strong>
-  <%= @my_search.user %>
-</p>
-
-<%= link_to 'Edit', edit_my_search_path(@my_search) %> |
-<%= link_to 'Back', my_searches_path %>
+<%= link_to t('.back', :default => t("helpers.links.back")),
+              my_searches_path, :class => 'btn btn-default'  %>
+<%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_my_search_path(@my_search), :class => 'btn btn-default' %>
+<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              my_search_path(@my_search),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
