--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -5,14 +5,9 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
+      
       <th><%= model_class.human_attribute_name(:name) %></th>
-         <th><%= model_class.human_attribute_name(:photo) %></th>
-      <th><%= model_class.human_attribute_name(:sex) %></th>
-      <th><%= model_class.human_attribute_name(:race) %></th>
-      <th><%= model_class.human_attribute_name(:age) %></th>
-      <th><%= model_class.human_attribute_name(:vaccinated) %></th>
-      <th><%= model_class.human_attribute_name(:information) %></th>
+      <th><%= model_class.human_attribute_name(:photo) %></th>
       <th><%= model_class.human_attribute_name(:pet_type_id) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
@@ -21,25 +16,24 @@
   <tbody>
     <% @pets.each do |pet| %>
       <tr>
-        <td><%= link_to pet.id, user_pet_path(current_user,pet) %></td>
-        <td><%= pet.name %></td>
+        
+        <td><%= link_to pet.name , user_pet_path(current_user,pet)%></td>
         <td><%= image_tag pet.photo.url(:thumb) %></td>
-        <td><%= pet.sex %></td>
-        <td><%= pet.race.name %></td>
-        <td><%= pet.age %></td>
-        <td><%= pet.vaccinated %></td>
-        <td><%= pet.information %></td>
         <td><%= pet.pet_type.name %></td>
-        <td><%=l pet.created_at %></td>
+        <td><%=l pet.created_at , format: :fecha %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_user_pet_path(current_user,pet), :class => 'btn btn-default btn-xs' %>
-          <%= link_to 'Reportar',new_lost_pet_path, :class => 'btn btn-default btn-xs', :id_pet => pet.id  ,data: { no_turbolink: true } %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
                       user_pet_path(current_user,pet),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-xs btn-danger' %>
+        <%if pet.state == "P"%>   
+            <td><div class="btn btn-xs btn-danger">Lost</div><td>
+         <%else%>
+            <%= link_to 'Reportar',new_lost_pet_path(:id_pet => pet.id ), :class => 'btn btn-default btn-xs' ,data: { no_turbolink: true } %>
+        <%end%>
         </td>
       </tr>
     <% end %>
